add two routes for text
