# music_predictor_backend/routes/v1/TextRouter.py
@@ -1,5 +1,6 @@
 from fastapi import APIRouter, Depends, File, UploadFile
 
+from music_predictor_backend.dto.MusicDTO import PredictByModelResponse
 from music_predictor_backend.services.TextService import TextService
 
 textRouter = APIRouter(
@@ -15,3 +16,19 @@ async def convert_files_to_dataframe(
     text_service: TextService = Depends(),
 ):
     return text_service.upload_dataset(csv_file)
+
+
+@textRouter.post("/predict")
+async def predict(
+    text: str,
+    text_service: TextService = Depends(),
+) -> PredictByModelResponse:
+    return await text_service.predict(text)
+
+
+@textRouter.post("/upload_model")
+async def upload_model(
+    model: UploadFile = File(...),
+    text_service: TextService = Depends(),
+) -> dict[str, str]:
+    return await text_service.upload_model(model)
